--- a/index.html
+++ b/index.html
@@ -10,19 +10,26 @@
 </head>
 <body>
     <header>CALCULATOR</header>
-        <div class="console">BUTTS</div>
-        <div class="buttons">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>0</button>
-            <button class="equals">=</button>
+        <div id="calculator">
+            <div class="console"></div>
+            <div class="buttons">
+                <div class="number" data-id="1">1</div>
+                <div class="number" data-id="2">2</div>
+                <div class="number" data-id="3">3</div>
+                <div class="number" data-id="4">4</div>
+                <div class="number" data-id="5">5</div>
+                <div class="number" data-id="6">6</div>
+                <div class="number" data-id="7">7</div>
+                <div class="number" data-id="8">8</div>
+                <div class="number" data-id="9">9</div>
+                <div class="number" data-id="0">0</div>
+                <button class="multiply" data-id="multiply">*</button>
+                <button class="add" data-id="add">+</button>
+                <button class="divide" data-id="divide">/</button>
+                <button class="subtract" data-id="subtract">-</button>
+                <button class="clear" data-id="clear">C</button>
+                <button class="equals" data-id="equal">=</button>
+            </div>
         </div>
 </body>
 </html>
