--- a/index.html
+++ b/index.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLCLTR</title>
+    <title>Stupid Lil Calculator</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
 </head>
 <body>
     <header>CALCULATOR</header>
-        <div id="calculator">
-            <div class="console"></div>
+        <main id="calculator">
+            <div id="display"></div>
             <div class="buttons">
-                <div class="number" data-id="1">1</div>
-                <div class="number" data-id="2">2</div>
-                <div class="number" data-id="3">3</div>
-                <div class="number" data-id="4">4</div>
-                <div class="number" data-id="5">5</div>
-                <div class="number" data-id="6">6</div>
-                <div class="number" data-id="7">7</div>
-                <div class="number" data-id="8">8</div>
-                <div class="number" data-id="9">9</div>
-                <div class="number" data-id="0">0</div>
-                <button class="multiply" data-id="multiply">*</button>
-                <button class="add" data-id="add">+</button>
-                <button class="divide" data-id="divide">/</button>
-                <button class="subtract" data-id="subtract">-</button>
-                <button class="clear" data-id="clear">C</button>
-                <button class="equals" data-id="equal">=</button>
+                <button type="button" class="number" value="1" data-key="49">1</button>
+                <button type="button" class="number" value="2" data-key="50">2</button>
+                <button type="button" class="number" value="3" data-key="51">3</button>
+                <button type="button" class="number" value="4" data-key="52">4</button>
+                <button type="button" class="number" value="5" data-key="53">5</button>
+                <button type="button" class="number" value="6" data-key="54">6</button>
+                <button type="button" class="number" value="7" data-key="55">7</button>
+                <button type="button" class="number" value="8" data-key="56">8</button>
+                <button type="button" class="number" value="9" data-key="57">9</button>
+                <button type="button" class="number" value="0" data-key="48">0</button>
+                <button type="button" class="operator" value="multiply" data-key="88">*</button>
+                <button type="button" class="operator" value="add" data-key="61">+</button>
+                <button type="button" class="operator" value="divide" data-key="68">/</button>
+                <button type="button" class="operator" value="subtract" data-key="173">-</button>
+                <button type="button" class="clear" value="clear" data-key="67">C</button>
+                <button type="button" class="equals" value="equal" data-key="69">=</button>
             </div>
-        </div>
+        </main>
+        <script src="script.js"></script>
 </body>
 </html>
