--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
         <main id="calculator">
             <div id="display"></div>
             <div class="buttons">
-                <button type="button" class="number" value="1" data-key="49">1</button>
-                <button type="button" class="number" value="2" data-key="50">2</button>
-                <button type="button" class="number" value="3" data-key="51">3</button>
-                <button type="button" class="number" value="4" data-key="52">4</button>
-                <button type="button" class="number" value="5" data-key="53">5</button>
-                <button type="button" class="number" value="6" data-key="54">6</button>
-                <button type="button" class="number" value="7" data-key="55">7</button>
-                <button type="button" class="number" value="8" data-key="56">8</button>
-                <button type="button" class="number" value="9" data-key="57">9</button>
-                <button type="button" class="number" value="0" data-key="48">0</button>
-                <button type="button" class="operator" value="multiply" data-key="88">*</button>
-                <button type="button" class="operator" value="add" data-key="61">+</button>
-                <button type="button" class="operator" value="divide" data-key="68">/</button>
-                <button type="button" class="operator" value="subtract" data-key="173">-</button>
-                <button type="button" class="clear" value="clear" data-key="67">C</button>
-                <button type="button" class="equals" value="equal" data-key="69">=</button>
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+                <button class="number">0</button>
+                <button class="operator">*</button>
+                <button class="operator">+</button>
+                <button class="operator">/</button>
+                <button class="operator">-</button>
+                <button class="clear">C</button>
+                <button class="equals">=</button>
             </div>
         </main>
         <script src="script.js"></script>
